aws_ec2.tf
provider "aws" {
  region = "us-west-2"
  access_key = "xyz"
  secret_key = "abc"
}

resource "aws_instance" "example" {
  ami           = "ami-0c55b159cbfafe1f0"
  instance_type = "t2.micro"
  count = 2

  tags = {
    Name = "example-instance"
  }
}
